17825
{code}
scala> def impl(c: Context) = { c.error(c.enclosingPosition, "foo"); c.error(c.enclosingPosition, "bar"); c.literalUnit }
impl: (c: scala.reflect.macros.Context)c.Expr[Unit]

scala> def foo = macro impl
defined term macro foo: Unit

scala> foo
<console>:32: error: foo
              foo
              ^
{code}
